--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^3.4.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.3",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
